--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
+plugins {
+    id 'org.springframework.boot' version '2.2.5.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'java'
+}
 
 version = '1.0.0'
 sourceCompatibility = 1.8
@@ -20,6 +23,11 @@ dependencies {
 
     testCompile('org.junit.jupiter:junit-jupiter:5.6.0')
     testCompile('org.assertj:assertj-core:3.15.0')
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
