--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#spring.profiles.active=web
+spring.profiles.active=console
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/chess_game?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=inbi
