--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.profiles.active=web
-spring.profiles.active=console
+spring.profiles.active=web
+#spring.profiles.active=console
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/chess_game?serverTimezone=UTC&characterEncoding=UTF-8
